2007-03-28  Tambet Ingo  <tambet@ximian.com>

	* src/applet-dbus-info.c (nmi_dbus_get_key_for_network): Fix a typo: we do
	want the device to be a wireless device.

2007-03-26  Tambet Ingo  <tambet@ximian.com>

	Fix VPN.
	Clean up a lot of old non-working dbus calls and data structures and replace
	them with what libnm-glib provides.

	* src/applet-dbus-devices.c
	* src/applet-dbus-devices.h
	* src/applet-dbus-vpn.c
	* src/applet-dbus-vpn.h
	* src/wireless-network.c
	* src/wireless-network.h
	* src/nm-device.c
	* src/nm-device.h
	* src/vpn-connection.c
	* src/vpn-connection.h

	Remove. All of these are provided by libnm-glib now.

2007-03-16  Tambet Ingo  <tambet@ximian.com>

	First stab at converting the applet over to libnm-glib instead of using
	the low-level DBUS API (which is removed from NM by now). Since libnm-glib
	emits signals for all "interesting" state changes in NM, we don't have to
	poll for any changes in the applet and can sleep and do nothing if there
	are no events (either from X or libnm-glib).

	The current status should be that the status icon should show the correct
	icon which reflects the NM state, right-click menu should work 100%, and
	the left click menu (devices) should show the correct information. Device
	activation should work only for wired devices. VPN doesn't work at all.
	And there's a bunch of warnings on the console.

	* configure.ac: Put all PKG-CONFIG checks in one check so that it can
	remove duplicate CFLAGS, LDFLAGS and libraries to link.

2007-02-19  Dan Williams  <dcbw@redhat.com>

	Patch from Andreas Hanke <andreas.hanke@gmx-topmail.de>

	* configure.ac
		- Remove unused bits that calculate EXPANDED_BINDIR and
			DBUS_SYSTEMD_DIR (gnome.org #409322)

2007-02-18  Dan Williams  <dcbw@redhat.com>

	Patch from Christian Persch <chpe@gnome.org>
	* src/Makefile.am
		- Don't build libegg sources when using GtkStatusIcon

2007-02-16  Dan Williams  <dcbw@redhat.com>

	* src/applet.c