@@ -1,3 +1,8 @@
+2007-05-07  Tambet Ingo  <tambet@ximian.com>
+
+	* src/applet.c (nma_menu_item_activate): Create and use a NMConnection
+	for device activation.
+
 2007-03-28  Tambet Ingo  <tambet@ximian.com>
 
 	* src/applet-dbus-info.c (nmi_dbus_get_key_for_network): Fix a typo: we do
